# ucfirst

./: CHANGELOG.md  Cargo.toml
src/: lib.rs  tests.rs
t/: README.md
tests/: integration.rs
