[package]
name = "ucfirst"
version = "0.1.0"
edition = "2021"
description = "Uppercase the first letter of a string"
repository = "https://github.com/qtfkwk/ucfirst"
license = "MIT"
readme = "README.md"
keywords = [ "casing", "case", "string", "capital", "uppercase" ]
categories = [ "text-processing" ]
